# repo-scan

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
references/: interpreting-findings.md  scoring-rubric.md  threat-patterns.md
scripts/: generate_report.py  scan_repo.py
test-samples/: README.md
test-samples/clean/: README.md  main.py  package.json
test-samples/malicious/: SKILL.md  exfil.py  install.sh  package.json  payload.js  setup.py
tests/: run_tests.py
